# closest_point_KDtree_data_structure

./: .gitignore  CMakeLists.txt  Makefile  README.md  closest_point.cpp  kdtree.hpp  points.txt
Examples/: closest_point.cpp  data.csv
include/: kdtree.hpp
